# SignalCatcher

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: README  env.py
alembic/versions/: 1889415f2735_add_account_terminated_to_contentstatus.py  336413857350_add_age_restricted_to_contentstatus.py  39c21a6249cc_add_copyright_removed_to_contentstatus.py  61239a1ab79d_add_members_only_to_contentstatus.py  71d99b3e6db4_add_error_info_to_content_model.py  871e2c7eaf91_add_private_video_to_contentstatus.py  ff9d893277fe_create_tables.py
script/: delete_content.py  download_videos.py  find_non_mp4.py  process_errors.py
src/application/dtos/: source_create_dto.py  source_response_dto.py  youtube_source_create_dto.py
src/application/mappers/: source_dto_mapper.py
src/application/use_cases/: add_content_from_link_use_case.py  add_content_from_playlist_use_case.py  create_source_use_case.py  run_daily_capture_use_case.py
src/config/: settings.py
src/domain/interfaces/: content_repository.py  logger.py  monitor_service.py  monitored_source_repository.py  notification.py  scraper.py  source_service.py
src/domain/models/: content_entity.py  source_entity.py  youtube_channel_result.py  youtube_channel_result_dto.py  youtube_video.py  youtube_video_dto.py
src/infrastructure/loggers/: __init__.py  logger.py  std_logger.py
src/infrastructure/notifications/: voice_monkey_notification.py
src/infrastructure/repositories/: connector.py  content_repository.py  monitored_source_repository.py
(+22 files in other folders)
