[project]
name = "signalcatcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.5",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "yt-dlp>=2026.7.4",
    "apscheduler>=3.10.4",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "requests>=2.34.2",
]
